crates/keron-lang/tests/corpus/errors/check/union_ordering_rejected.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `<` requires `Int`, `Double`, or `String` operands, found `OsType` and `String`
  --> 3:25
  |
3 | val nonsense: Boolean = os_type() < "Macos"
  |                         ^^^^^^^^^^^^^^^^^^^
